--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -21,6 +21,7 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
+    "xyz.string.sdk": "https://github.com/String-xyz/unity-sdk.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
