--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 /[Aa]ssets/MetaMask/Samples
+/[Aa]ssets/Vuplex
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -64,3 +65,6 @@ crashlytics-build.properties
 
 # User Settings
 UserSettings
+
+# Vuplex Meta
+Assets/Vuplex.meta
